test/corpus/doc.txt
==================
basic
==================

%{
#include "yy.tab.h"
%}

%option noyywrap

digit   [0-9]

%%

%%

------------------

(source_file
  (section1
    (prologue
      (embedded_code))
    (directive
      (identifier)
      (value))
    (definition
      (identifier)
      (rule)))
  (section2))

==================
comments
==================

/* a comment */

letter [a-zA-Z]

%{
#include "y.tab.h"
%}

%p /* one */ /* two */ 6000 /* set positions to 6000 */
/* another comment */
%option noyywrap 
%set

/* the following is technically not valid, but pretty common while writing */
digit

/* even more comments wow */

%%

"+"      /* + */ /* + */  { return PLUS;    }
"-"      /* - */          { return MINUS;   }
"//".+                    { return COMMENT; }

\n
[ \t\r]                   /* skip whitespace */

%%

------------------

(source_file
  (comment)
  (section1
    (definition
      (identifier)
      (rule))
    (prologue
      (embedded_code))
    (directive
      (identifier)
      (comment)
      (comment)
      (value)
      (comment))
    (comment)
    (directive
      (identifier)
      (value))
    (directive
      (identifier))
    (comment)
    (definition
      (identifier))
    (comment))
  (section2
    (declaration
      (rule
        (string))
      (embedded_code))
    (declaration
      (rule
        (string))
      (embedded_code))
    (declaration
      (rule
        (string))
      (embedded_code))
    (declaration
      (rule
        (escaped)))
    (declaration
      (rule
        (escaped)
        (escaped))
      (embedded_code))))

==================
embedded_code
==================

%option noyywrap

%{
#include "y.tab.h"
%}

%e 4000
digit [0-9]

%{
int lineno = 0;
%}

%p 6000 /* set positions to 6000 */

%%

""                   { return THE_VOID; }
"+"                  { return PLUS;     } lineno += 1;

%%

int thing() {
    return true;
}

------------------

(source_file
  (section1
    (directive
      (identifier)
      (value))
    (prologue
      (embedded_code))
    (directive
      (identifier)
      (value))
    (definition
      (identifier)
      (rule))
    (prologue
      (embedded_code))
    (directive
      (identifier)
      (value)
      (comment)))
  (section2
    (declaration
      (rule
        (string))
      (embedded_code))
    (declaration
      (rule
        (string))
      (embedded_code)))
  (embedded_code))

==================
states
==================

%{
#include "y.tab.h"
%}

%x COMMENT

%%


"/*"                       { BEGIN(COMMENT); }
<COMMENT>([^*]|\*[^/])*    /* */
<COMMENT>\n.*              { yycolumn = 1;
                             yyless(1); }
<COMMENT>"*/"              { BEGIN(INITIAL); }

%%

------------------

(source_file
  (section1
    (prologue
      (embedded_code))
    (directive
      (identifier)
      (value)))
  (section2
    (declaration
      (rule
        (string))
      (embedded_code))
    (state
      (identifier)
      (declaration
        (rule
          (escaped))
        (embedded_code)))
    (state
      (identifier)
      (declaration
        (rule
          (escaped))
        (embedded_code)))
    (state
      (identifier)
      (declaration
        (rule
          (string))
        (embedded_code)))))

==================
more complex rules
==================

digit         [0-9]
letter        [a-zA-Z]

%%

[]              /* technically not valid, but a pretty common state while typing */
[0-9]+\.[0-9]+  { return FLOAT; }
[ \t]           { return WHITESPACE; }
{letter}({letter}|{digit})* {
                       if (true) {
                           yylval.id = strdup(yytext);
                       }
                       return IDENT;      }
"/*"            BEGIN(IN_COMMENT);

%%

------------------

(source_file
  (section1
    (definition
      (identifier)
      (rule))
    (definition
      (identifier)
      (rule)))
  (section2
    (declaration
      (rule)
      (embedded_code))
    (declaration
      (rule
        (escaped))
      (embedded_code))
    (declaration
      (rule
        (escaped))
      (embedded_code))
    (declaration
      (rule
        (interpolation
          (identifier))
        (interpolation
          (identifier))
        (interpolation
          (identifier)))
      (embedded_code))
    (declaration
      (rule
        (string))
      (embedded_code))))

==================
multiline state
==================

%%

<INITIAL>{
"/*"      BEGIN(IN_COMMENT);
}
<IN_COMMENT>{
"*/"      BEGIN(INITIAL);
[^*\n]+   // eat comment in chunks
"*"       // eat the lone star
\n        yylineno++;
}

%%

------------------

(source_file
  (section2
    (state
      (identifier)
      (declaration
        (rule
          (string))
        (embedded_code)))
    (state
      (identifier)
      (declaration
        (rule
          (string))
        (embedded_code))
      (declaration
        (rule
          (escaped))
        (embedded_code))
      (declaration
        (rule
          (string))
        (embedded_code))
      (declaration
        (rule
          (escaped))
        (embedded_code)))))

==================
incomplete 02
==================

digit [0-9]

%%

{digit}\.{digit}

------------------

(source_file
  (section1
    (definition
      (identifier)
      (rule)))
  (section2
    (declaration
      (rule
        (interpolation
          (identifier))
        (escaped)
        (interpolation
          (identifier))))))

==================
incomplete 01
==================

digit [0-9]

------------------

(source_file
  (section1
    (definition
      (identifier)
      (rule))))
